# cin

./: .coverage  .gitignore  alembic.ini  app.py  pyproject.toml  setup.cfg  setup.py
cin/: __init__.py  app.py  config.py  database.py  models.py  sync.py  transactions.py  tse.py
cin/alembic/: env.py
cin/alembic/versions/: 0b3bf34d8c79_add_productgroup_model.py  1fb40e81286c_add_category_model_as_tree_with_.py  1ffd6e7bf57b_add_payment_model.py  364ee536e08d_mod_productgroup_as_tree_with_relations.py  732267b33fb2_add_inital_commit.py  7ab9e76ce51a_add_products_model.py  9fa423b33445_add_productgroup_model.py  f4606675a46b_add_product_model.py
cin/cin/: __init__.py
cin/uix/: __init__.py  app.kv  app.py  database.kv  database.py  message.kv  message.py  pos.kv  pos.py  products.kv  products.py  receipt.kv  receipt.py  results.kv  results.py  root.kv  root.py  sale.kv  sale.py  search.kv  search.py  settings.kv  settings.py
mobile/: buildozer.spec  main.py
tests/: test_app.py
