[metadata]
name = cin
description = Cin is a point-of-sale frontend.
version = 0.1.0
author = lluar
author_email = lluar@ccodein.org
license = AGPLv3
url = http://www.ccodein.org
platforms = any

[options]
zip_safe = False
packages = find:

install_requires =
	kivy[base]

[options.package_data]
cin = uix/*.kv

[options.extras_require]
develop =
	pytest
	requests
	flake8
	flake8-docstrings
	mypy
	buildozer
	cython


[options.entry_points]
console_scripts =
    cin = cin:cin

[tool:pytest]
testpaths =
	tests

[flake8]
exclude = .git,__pycache__,build,dist,.undodir, mobile

[mypy]
files = cin
exclude = setup.py
disallow_untyped_defs = True

[mypy-kivy.*]
ignore_missing_imports = True
